# stwo-cairo-ts

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.browser.config.ts
.github/: publish.yaml
.github/workflows/: publish.yaml  test.yaml
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/src/: example_executable.json  example_prover_input.json  lib.rs  prover_input.json
src/: index.ts  main.ts  prove.ts  test.ts  types.d.ts  verify.ts  wasm-handle.ts
src/worker/: wasm-worker.ts
test/: dev.ts  e2e.test.ts
