[package]
name = "cairo-prove-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# corresponds to https://github.com/starkware-libs/stwo-cairo/blob/335de15d1dccfc3e72da572e8eb9829e9c27032b/cairo-prove/Cargo.toml
[dependencies]
getrandom = { version = "0.3" }
serde = "1.0.134"
sonic-rs = "0.3.17"
thiserror-no-std = "2.0.2"
cairo-air = { git = "https://github.com/clealabs/stwo-cairo", branch = "62c3c4a-fix-wasm" }
cairo-lang-runner = { git = "https://github.com/clealabs/cairo.git", branch = "fix-wasm64" }
stwo-cairo-adapter = { git = "https://github.com/clealabs/stwo-cairo", branch = "62c3c4a-fix-wasm", default-features = false}
stwo_cairo_prover = { git = "https://github.com/clealabs/stwo-cairo", branch = "62c3c4a-fix-wasm" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = ["mod_builtin"], default-features = false}
cairo-prove = { git = "https://github.com/clealabs/stwo-cairo", branch = "fix-wasm64-standalone"}

[profile.release]
opt-level = 3
